--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   # Notificaciones locales
   flutter_local_notifications: ^17.2.3
   
+  # Sistema Premium y Monetización
+  in_app_purchase: ^3.1.11        # Compras in-app (Google Play + App Store)
+  google_mobile_ads: ^5.1.0       # Anuncios de Google AdMob
+  
   # Internacionalización
   flutter_localizations:
     sdk: flutter
